[package]
name = "app"
version = "0.0.1"
authors = ["Jayden Chan <jaydencn7@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "*"
uuid = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.postgres]
version = "*"
features = ["with-uuid"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["postgres_pool", "json"]
